[package]
name = "tilepad-plugin-vtftk"
version = "0.0.1"
edition = "2024"

# CI expects the produced binary names to always be "tilepad-plugin" for bundling
[[bin]]
name = "tilepad-plugin"
path = "src/main.rs"

[dependencies]
# Plugin SDK
tilepad-plugin-sdk = "0.1.0"

# Async runtime
tokio = { version = "1", features = ["rt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1.16.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
